[package]
name = "token"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_RemoteDesktop"
] }
